start match 0 to 0

--- a/kata/spec/SpecRunner.html
+++ b/kata/spec/SpecRunner.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title>Super Market Specs</title>
+  <title>Tennis Kata</title>
   <link rel="stylesheet" href="libs/mocha/mocha.css">
 </head>
 <body>
@@ -15,8 +15,8 @@
 
   <script type="text/javascript">
     require([
-      'acceptanceTests/smokeTests',
-      'unitTests/smokeTests'
+      'acceptanceTests/TennisMatchShould'
+      //'unitTests/smokeTests'
     ], 
     runMocha);
   </script>
