added some scoring

--- a/kata/spec/SpecRunner.html
+++ b/kata/spec/SpecRunner.html
@@ -15,8 +15,8 @@
 
   <script type="text/javascript">
     require([
-      'acceptanceTests/TennisMatchShould'
-      //'unitTests/smokeTests'
+      'acceptanceTests/TennisMatchShould',
+      'unitTests/ScoreCalculatorShould'
     ], 
     runMocha);
   </script>
