new point strategy to accommodate advantage

--- a/kata/spec/SpecRunner.html
+++ b/kata/spec/SpecRunner.html
@@ -16,7 +16,9 @@
   <script type="text/javascript">
     require([
       'acceptanceTests/TennisMatchShould',
-      'unitTests/ScoreCalculatorShould'
+      'unitTests/GetBasicScoreShould',
+      'unitTests/IsAdvancedScoreShould',
+      'unitTests/GetAdvancedScoreShould'
     ], 
     runMocha);
   </script>
