recognize end of game

--- a/kata/spec/SpecRunner.html
+++ b/kata/spec/SpecRunner.html
@@ -18,7 +18,8 @@
       'acceptanceTests/TennisMatchShould',
       'unitTests/GetBasicScoreShould',
       'unitTests/IsAdvancedScoreShould',
-      'unitTests/GetAdvancedScoreShould'
+      'unitTests/GetAdvancedScoreShould',
+      'unitTests/IsEndOfGameShould'
     ], 
     runMocha);
   </script>
