--- a/kata/spec/SpecRunner.html
+++ b/kata/spec/SpecRunner.html
@@ -19,7 +19,8 @@
       'unitTests/GetBasicScoreShould',
       'unitTests/IsAdvancedScoreShould',
       'unitTests/GetAdvancedScoreShould',
-      'unitTests/IsEndOfGameShould'
+      'unitTests/IsEndOfGameShould',
+      'unitTests/GetEndOfGameScoreShould'
     ], 
     runMocha);
   </script>
